--- a/src/main/resources/templates/FlightSearch.html
+++ b/src/main/resources/templates/FlightSearch.html
@@ -23,6 +23,9 @@
                         <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <input type="number" th:field="*{capacity}" default="1" min="1" max="500" class="form-control"/>
+                </div>
                 <input type="submit" value="Search"/>
             </form>
         </div>
