--- a/src/main/resources/templates/FlightsList.html
+++ b/src/main/resources/templates/FlightsList.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <p th:text="'Flight Search Results'"/>
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered">
                 <thead>
                     <tr>
                         <th>#</th>
