--- a/src/main/resources/templates/FlightSearch.html
+++ b/src/main/resources/templates/FlightSearch.html
@@ -10,7 +10,7 @@
         <div class="container">
             <p th:text="'Welcome to TWAirline'"/>
 
-            <form method="post" th:action="@{/search}" th:object="${flight}">
+            <form method="post" th:action="@{/search}" th:object="${searchCriteria}">
                 <div class="form-group">
                     <select title="Source" class="form-control" id="source" name="source" th:field="*{source}">
                         <option value="">Select Source</option>
@@ -24,7 +24,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input type="number" th:field="*{capacity}" default="1" min="1" max="500" class="form-control"/>
+                    <input type="number" th:field="*{numberOfSeats}" min="1" max="500" class="form-control"/>
                 </div>
                 <input type="submit" value="Search"/>
             </form>
