--- a/src/main/resources/templates/FlightSearch.html
+++ b/src/main/resources/templates/FlightSearch.html
@@ -13,37 +13,46 @@
             <p class="lead">This is a simple flight search portal made with SpringBoot</p>
         </div>
         <form method="post" th:action="@{/}" th:object="${searchCriteria}">
-            <div class="form-group">
-                <label>From</label>
-                <select title="Source" class="form-control col-md-6" id="source" name="source" th:field="*{source}">
-                    <option value="">Select Source</option>
-                    <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" ></option>
-                </select>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label for="source" >From</label>
+                    <select title="Source" class="form-control" id="source" name="source" th:field="*{source}" required="required">
+                        <option value="">Select Source</option>
+                        <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" ></option>
+                    </select>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="destination">To</label>
+                    <select class="form-control" id="destination" name="destination" th:field="*{destination}" required="required">
+                        <option value="">Select Destination</option>
+                        <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
+                    </select>
+                </div>
             </div>
-            <div class="form-group">
-                <label>To</label>
-                <select class="form-control col-md-6" id="destination" name="destination" th:field="*{destination}">
-                    <option value="">Select Destination</option>
-                    <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}"></option>
-                </select>
+            <div class="row">
+
+                <div class="form-group col-md-4">
+                    <label for="travelClass">Travel Class</label>
+                    <select title="TravelClass" class="form-control" id="travelClass" name="travelClass" th:field="*{travelClass}" required="required">
+                        <option value="">Select Travel Class</option>
+                        <option th:each="travelClass : ${travelClasses}" th:value="${travelClass}" th:text="${travelClass}"></option>
+                    </select>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="numberOfSeats"># of Passengers</label>
+                    <input type = "number" th:field="*{numberOfSeats}" id="numberOfSeats" class="form-control" min="1"/>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="departureDate">Date of Journey</label>
+                    <input type = "date" th:field="*{departureDate}"  id="departureDate" class="form-control" th:attr="min=${today}" />
+                </div>
             </div>
-            <div class="form-group">
-                <label>Travel Class</label>
-                <select title="TravelClass" class="form-control col-md-6" id="travelClass" name="travelClass" th:field="*{travelClass}">
-                    <option value="">Select Travel Class</option>
-                    <option th:each="travelClass : ${travelClasses}" th:value="${travelClass}" th:text="${travelClass}"></option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label># of Passengers</label>
-                <input type = "number" th:field="*{numberOfSeats}"  class="form-control col-md-6" min="1"/>
-            </div>
-            <div class="form-group">
-                <label>Date of Journey</label>
-                <input type = "date" th:field="*{departureDate}"  class="form-control col-md-6" th:attr="min=${today}" />
-            </div>
-            <div class="form-group">
-                <button type="submit" class="form-control button btn-primary col-sm-3">Search</button>
+            <div class="row">
+                <div class="col-md-4" />
+                <div class="form-group col-md-4">
+                    <button class="form-control button btn-primary">Search</button>
+                </div>
+                <div class="col-md-4" />
             </div>
         </form>
 
@@ -60,6 +69,7 @@
                         <th>Available Seats</th>
                         <th>Departure Date</th>
                         <th>Travel Class</th>
+                        <th>Estimated Fare</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -71,6 +81,7 @@
                         <td th:text="${flight.getSeatsByClass(searchCriteria.travelClass)}"/>
                         <td th:text ="${flight.departureDate}"/>
                         <td th:text="${searchCriteria.travelClass}"/>
+                        <td th:text="${priceCalculator.getPrice(flight,searchCriteria.travelClass,searchCriteria.numberOfSeats)}"/>
                     </tr>
                 </tbody>
             </table>
